tests/neg/infer-fun-res2.stk
def g(x: Int) =                             // error
  if x == 0 then 1 else (f1 x) + ( g (x - 1))

def f1(x: Int) = f2 x

def f2(x: Int) = f3 x

def f3(x: Int) = g x

def check1(x: Int): Bool = f1 x
def check2(x: Int): Bool = f2 x
def check3(x: Int): Bool = f3 x

def q(x: Int) =                 // error
  if 0 == x then { a: 1 }
  else {
    a: x,
    b: 1 + (q (x - 1)).c
  }

def test2(x: Int): { a: Int } =
  q 10

def h1(x: Int) =                 // error
  if 0 == x then
    { a: 1 + (h1 (x - 1)).c }
  else {
    a: x,
    b: x + x
  }

def h2(x: Int) =        // error
  if 0 == x then        // error
    false
  else
    (h2 (x - 1)) * x
